Lesson-11-Ingress/Ingressingress-hosts-v1-protocoll.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Denis Astahov 2021
# _________________________________________________________
#   in C:\Windows\System32\drivers\etc\host file added:
#   192.168.59.101  kuber  
# 	192.168.59.101  web1.kuber 
# 	192.168.59.101  web2.kuber 
# 	192.168.59.101  cat.kuber 
#-----------------------------
#---------------------------------------------------------------------
kind: Ingress
apiVersion: networking.k8s.io/v1 #изменилась версия API
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: kuber
    http:
      paths:
      - path: /                    
        pathType: Prefix         #изменился формат описания путей, хостов, портов
        backend:
            service:
               name: main
               port:
                 number: 80
  - host: web1.kuber
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
               name: web1
               port:
                 number: 80
  - host: web2.kuber
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
               name: web2
               port:
                 number: 80
  - host: cat.kuber
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
               name: tomcat
               port:
                 number: 8080
