Lesson-11-Ingress/Ingressingress-paths-v1-protocol.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Host Paths
#
# Copyleft (c) by Denis Astahov 2021
# _________________________________________________________
#   in C:\Windows\System32\drivers\etc\host file added:
#   192.168.59.101  kuber  
# 	192.168.59.101  web1.kuber 
# 	192.168.59.101  web2.kuber 
# 	192.168.59.101  cat.kuber 
#---------------------------------------------------------------------
kind: Ingress
apiVersion: networking.k8s.io/v1    #изменилась версия API
metadata:
  name: ingress-paths

spec:
  rules:
  - host: kuber
    http:
      paths:
      - path: "/page1"              #изменился формат описания путей, хостов, портов
        pathType: Prefix
        backend:
            service:
               name: webx
               port:
                 number: 80
      - path: "/page2"
        pathType: Prefix
        backend:
            service:
               name: webx
               port:
                 number: 80
      - path: "/page3"
        pathType: Prefix
        backend:
            service:
               name: webx
               port:
                 number: 80
