Lesson-11-Ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#networking.k8s.io/v1
# Copyleft (c) by Denis Astahov 2022
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: www.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port:
              number: 80
  - host: web1.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web1
            port:
              number: 80
  - host: web2.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web2
            port:
              number: 80
  - host: cat.adv-it.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port:
              number: 8080
